--- a/project/myCrossing/src/app/calc-nabos/calc-nabos.component.css
+++ b/project/myCrossing/src/app/calc-nabos/calc-nabos.component.css
@@ -1,4 +1,3 @@
-/*-----------------------------TURNIP PROPHET-------------------------------*/
 :root {
   --color-blue: #0AB5CD;
   --color-light-blue: #5ECEDB;
@@ -83,6 +82,7 @@
   border-width: 0.3vw;
   border-radius: 50px;
   padding: 8px 16px;
+  margin: 1%;
 }
 
 .input__radio-buttons input[type="radio"]:not(:checked)+label:hover {
@@ -96,6 +96,58 @@
   border-color: rgb(149, 229, 155);
 }
 
+.form__row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 16px;
+  justify-content: center;
+  align-items: center;
+}
+
+.form__flex-wrap {
+  margin-top: 8px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1080px;
+  justify-content: center;
+  width: 70%;
+  margin: auto;
+}
+
+.form__row h3 {
+  width: 100%;
+  display: block;
+  font-weight: 800;
+  font-size: 1.25rem;
+  margin: 8px auto;
+  text-align: center;
+}
+
+.form__flex-wrap > div{
+  width: 33%;
+}
+
+.input__group {
+  display: flex;
+  flex-direction: column;
+  margin: 8px;
+  align-items: center;
+}
+
+.input__group > label {
+  opacity: 0.7;
+}
+
+input[type=number] {
+  width: 60px;
+  text-align: center;
+}
+
+.form__flex-wrap .input__group label {
+  margin-left: 0px;
+  margin-bottom: 8px;
+}
 
 .table-wrapper {
   display: inline-block;
@@ -193,9 +245,20 @@
   background-color: var(--table-range0);
 }
 
-/* ----------------------------------------------------------------------------------------- */
+#reset {
+  position: absolute;
+  top: 250px;
+  left:90px;
+  cursor: pointer;
+  border-style: solid;
+  border-width: 0.3vw;
+  border-radius: 50px;
+  padding: 8px 16px;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
 
-h2 {
+h1 {
   text-align: center;
 }
 
@@ -207,10 +270,13 @@ h2 {
   width: 25vw;
 }
 
+.patron-tag p {
+  font-size: 90%;
+}
+
 .patron-tag{
   margin: 1vw 0;
   border-radius: 20px;
-  background-color: aqua;
   overflow: hidden;
 }
 
@@ -229,13 +295,23 @@ h2 {
   padding-top: 4vw;
   margin-right:4vw;
   height:fit-content;
-  background-color: yellowgreen;
   width: 90%;
+  background-color: var(--blanco);
+  border-radius: 50px;
+  padding: 3%;
 }
 
 .info-wrap{
   position: relative;
   padding: 1vw 2vw;
   align-items:unset;
-  background-color: rgb(255, 134, 150);
 }
+
+label{
+  font-size: unset;
+}
+
+.background-img{
+  background-image: url("../../assets/images/plaza-ayto-blur.jpg");
+}
+
