--- a/project/myCrossing/src/app/calc-nabos/calc-nabos.component.html
+++ b/project/myCrossing/src/app/calc-nabos/calc-nabos.component.html
@@ -1,7 +1,190 @@
-<div class="flex-column-centered padding-nav-footer" style="background-color: rgb(255, 0, 43);">
+<div class="flex-column-centered padding-nav" style="background-color: var(--blanco);">
+  <h1>Mercado de nabos</h1>
+
+  <!-- Calculadora -->
+  <div class="w100 shadow-ins-bot" style="position:relative; background-color: var(--blanco);">
+    <div>
+      <form class="input__form">
+        <div class="flex-between" style="width: 65%; margin:auto; text-align: center;margin-top: 2%;">
+          <div class="form__row">
+            <h3>¿Es la primera vez que compras?</h3>
+            <div class="input__group" style="width: 100%;">
+              <div class="input__radio-buttons" style="width: 100%;">
+                <input type="radio" id="first-time-radio-no" name="first-time" value="false" checked>
+                <label for="first-time-radio-no">No</label>
+                <input type="radio" id="first-time-radio-yes" name="first-time" value="true">
+                <label for="first-time-radio-yes">Si</label>
+              </div>
+            </div>
+          </div>
+
+          <div class="form__row">
+            <h3>Patrón anterior</h3>
+            <div class="input__group">
+              <div class="input__radio-buttons">
+                <input type="radio" id="pattern-radio-unknown" name="pattern" value="-1" checked>
+                <label for="pattern-radio-unknown">No lo sé</label>
+                <input type="radio" id="pattern-radio-fluctuating" name="pattern" value="0">
+                <label for="pattern-radio-fluctuating">Variante</label>
+                <input type="radio" id="pattern-radio-small-spike" name="pattern" value="3">
+                <label for="pattern-radio-small-spike">Pico pequeño</label>
+                <input type="radio" id="pattern-radio-large-spike" name="pattern" value="1">
+                <label for="pattern-radio-large-spike">Pico grande</label>
+                <input type="radio" id="pattern-radio-decreasing" name="pattern" value="2">
+                <label for="pattern-radio-decreasing">Descendiente</label>
+              </div>
+            </div>
+          </div>
+
+          <div class="form__row">
+            <h3>Precio al que compraste los nabos</h3>
+            <div class="input__group">
+              <input type="number" class="text-input" pattern="\d*" id="buy" placeholder="..." />
+            </div>
+          </div>
+      </div>
+
+        <div class="form__flex-wrap" style="margin-top: 2%;">
+          <div class="form__row">
+            <h3>Lunes</h3>
+            <div class="input__group">
+              <label for="sell_2">AM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_2" placeholder="..." />
+            </div>
+            <div class="input__group">
+              <label for="sell_3">PM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_3" placeholder="..." />
+            </div>
+          </div>
+
+          <div class="form__row">
+            <h3>Martes</h3>
+            <div class="input__group">
+              <label for="sell_4">AM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_4" placeholder="..." />
+            </div>
+            <div class="input__group">
+              <label for="sell_5">PM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_5" placeholder="..." />
+            </div>
+          </div>
+
+          <div class="form__row">
+            <h3>Miércoles</h3>
+            <div class="input__group">
+              <label for="sell_6">AM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_6" placeholder="..." />
+            </div>
+            <div class="input__group">
+              <label for="sell_7">PM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_7" placeholder="..." />
+            </div>
+          </div>
+
+          <div class="form__row">
+            <h3>Jueves</h3>
+            <div class="input__group">
+              <label for="sell_8">AM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_8" placeholder="..." />
+            </div>
+            <div class="input__group">
+              <label for="sell_9">PM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_9" placeholder="..." />
+            </div>
+          </div>
+
+          <div class="form__row">
+            <h3>Viernes</h3>
+            <div class="input__group">
+              <label for="sell_10">AM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_10" placeholder="..." />
+            </div>
+            <div class="input__group">
+              <label for="sell_11">PM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_11" placeholder="..." />
+            </div>
+          </div>
+
+          <div class="form__row">
+            <h3>Sábado</h3>
+            <div class="input__group">
+              <label for="sell_12">AM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_12" placeholder="..." />
+            </div>
+            <div class="input__group">
+              <label for="sell_13">PM</label>
+              <input type="number" class="text-input" pattern="\d*" id="sell_13" placeholder="..." />
+            </div>
+          </div>
+        </div>
+
+        <button type="button" id="reset" class="button button--reset boton-alargado b-azul b-rojo-hover" name="action">Resetear</button>
+      </form>
+    </div>
+
+    <!-- Tabla -->
+    <div class="flex-centered" style="margin: 2%;">
+      <div class="table-wrapper">
+        <table id="turnipTable">
+          <thead>
+            <tr>
+              <th valign="bottom">Patrón</th>
+              <th colspan="2" valign="bottom">Probabilidad(%)</th>
+              <th colspan="2">
+                <div>Lunes</div>
+                <div>
+                  <span>AM</span>
+                  <span>PM</span>
+                </div>
+              </th>
+              <th colspan="2">
+                <div>Martes</div>
+                <div>
+                  <span>AM</span>
+                  <span>PM</span>
+                </div>
+              </th>
+              <th colspan="2">
+                <div>Miércoles</div>
+                <div>
+                  <span>AM</span>
+                  <span>PM</span>
+                </div>
+              </th>
+              <th colspan="2">
+                <div>Jueves</div>
+                <div>
+                  <span>AM</span>
+                  <span>PM</span>
+                </div>
+              </th>
+              <th colspan="2">
+                <div>Viernes</div>
+                <div>
+                  <span>AM</span>
+                  <span>PM</span>
+                </div>
+              </th>
+              <th colspan="2">
+                <div>Sábado</div>
+                <div>
+                  <span>AM</span>
+                  <span>PM</span>
+                </div>
+              </th>
+              <th valign="bottom">Mínimo garantizado</th>
+              <th valign="bottom">Máximo potencial</th>
+            </tr>
+          </thead>
+          <tbody id="output"></tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
+
   <!-- Informacion -->
-  <div class="w100" style="background-color: pink;">
-    <h2>Mercado de nabos</h2>
+  <div class="w100 background-img padding-nav-footer" style="padding: 3vw 0">
     <div class="flex-between info-wrap">
       <!-- Información general -->
       <div class="flex-column-centered info-general">
@@ -22,8 +205,8 @@
             mejor opción no arriesgarse demasiado, vender cuanto antes y aminorar las pérdidas.</p>
 
           <br>
-          <h3 style="color:red">¡ATENCIÓN!</h3>
-          <p style="color:red"> Hacer time travel hace que se pudran los nabos, ¡así que ten cuidado!</p>
+          <h3 class="warning">¡ATENCIÓN!</h3>
+          <p class="warning"> Hacer time travel hace que se pudran los nabos, ¡así que ten cuidado!</p>
 
         </div>
         <img src="../../assets/images/juliana-big.png">
@@ -31,7 +214,7 @@
 
       <!-- Patrones -->
       <div class="flex-column-centered" style="align-items: unset; width: 90%">
-        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[0] = true" (mouseleave)="this.filtrosView[0] = false">
+        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[0] = true" (mouseleave)="this.filtrosView[0] = false" [style.background-color]="filtrosView[0] ? 'var(--l-verde)' : 'var(--l-azul)'">
           <div class="flex-column-centered">
             <h2>Variante</h2>
             <p [style.display]="filtrosView[0] ? 'block' : 'none'">Va subiendo y bajando sin seguir ningún orden en particular.
@@ -40,7 +223,7 @@
           <img src="../../assets/images/aleatorio.png">
         </div>
 
-        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[1] = true" (mouseleave)="this.filtrosView[1] = false">
+        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[1] = true" (mouseleave)="this.filtrosView[1] = false" [style.background-color]="filtrosView[1] ? 'var(--l-verde)' : 'var(--l-azul)'">
           <div class="flex-column-centered">
             <h2>Descendiente</h2>
             <p [style.display]="filtrosView[1] ? 'block' : 'none'">El precio va bajando durante toda la semana, por lo que
@@ -49,23 +232,20 @@
           <img src="../../assets/images/descenso.png">
         </div>
 
-        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[2] = true" (mouseleave)="this.filtrosView[2] = false">
+        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[2] = true" (mouseleave)="this.filtrosView[2] = false" [style.background-color]="filtrosView[2] ? 'var(--l-verde)' : 'var(--l-azul)'">
           <div class="flex-column-centered">
             <h2>Pico pequeño</h2>
             <p [style.display]="filtrosView[2] ? 'block' : 'none'">Empieza bajando pero luego sube 3 veces, alcanzando en el
-              tercer salto el precio de venta más alto, y luego vuelve a bajar.
-              Lo mejor es venderlo en ese tercer ascenso consecutivo.</p>
+              tercer salto el precio de venta más alto, y luego vuelve a bajar.</p>
           </div>
           <img src="../../assets/images/pico-pequenio.png">
         </div>
 
-        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[3] = true" (mouseleave)="this.filtrosView[3] = false">
+        <div class="flex-between patron-tag" (mouseenter)="this.filtrosView[3] = true" (mouseleave)="this.filtrosView[3] = false" [style.background-color]="filtrosView[3] ? 'var(--l-verde)' : 'var(--l-azul)'">
           <div class="flex-column-centered">
             <h2>Pico grande</h2>
-            <p [style.display]="filtrosView[3] ? 'block' : 'none'">Igual que el anterior, con la diferencia de que entre el primer
-              y segundo ascenso hay un descenso. Sin embargo, el segundo y
-              tercer ascenso son mucho más pronunciados y se alcanzan precios
-              muy altos.</p>
+            <p [style.display]="filtrosView[3] ? 'block' : 'none'">Similar al anterior, aunque el segundo y
+              tercer ascenso son mucho más pronunciados y se alcanzan precios muy altos.</p>
           </div>
           <img src="../../assets/images/pico-grande.png">
         </div>
@@ -75,190 +255,6 @@
     </div>
   </div>
 
-  <!-- Calculadora -->
-  <div class="w100" style="background-color: orange;">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos unde a fugit
-      atque quidem repellendus maiores eos fuga quia ab voluptates, laboriosam maxime natus
-       corrupti suscipit odit non, expedita repellat ex ipsa itaque veniam. Consequatur
-       voluptatum perspiciatis a, repellendus impedit suscipit dolores vero aliquid sit incidunt
-        voluptas cum, culpa eius molestias voluptate soluta velit architecto repellat corporis
-         reprehenderit. Quam, optio. Nobis quas iste ab dignissimos minus ullam cupiditate laboriosam
-         ipsa itaque! Sapiente autem enim accusamus quas iste, sed, iusto ex perferendis eum error magni
-         suscipit obcaecati molestias ea cupiditate corporis eveniet? Quia maxime facilis ratione nulla
-         vitae nemo molestias adipisci.</p>
-  </div>
-  <div>
-    <form class="input__form">
-      <div class="form__row">
-        <h3>¿Es la primera vez que compras?</h3>
-        <div class="input__group">
-          <div class="input__radio-buttons">
-            <input type="radio" id="first-time-radio-no" name="first-time" value="false" checked>
-            <label for="first-time-radio-no">No</label>
-            <input type="radio" id="first-time-radio-yes" name="first-time" value="true">
-            <label for="first-time-radio-yes">Si</label>
-          </div>
-        </div>
-      </div>
-
-      <div class="form__row">
-        <h3>Patrón anterior</h3>
-        <div class="input__group">
-          <div class="input__radio-buttons">
-            <input type="radio" id="pattern-radio-unknown" name="pattern" value="-1" checked>
-            <label for="pattern-radio-unknown">No lo sé</label>
-            <input type="radio" id="pattern-radio-fluctuating" name="pattern" value="0">
-            <label for="pattern-radio-fluctuating">Variante</label>
-            <input type="radio" id="pattern-radio-small-spike" name="pattern" value="3">
-            <label for="pattern-radio-small-spike">Pico pequeño</label>
-            <input type="radio" id="pattern-radio-large-spike" name="pattern" value="1">
-            <label for="pattern-radio-large-spike">Pico grande</label>
-            <input type="radio" id="pattern-radio-decreasing" name="pattern" value="2">
-            <label for="pattern-radio-decreasing">Descendiente</label>
-          </div>
-        </div>
-      </div>
-
-      <div class="form__row">
-        <h3>Precio al que compraste los nabos</h3>
-        <div class="input__group">
-          <input type="number" class="text-input" pattern="\d*" id="buy" placeholder="..." />
-        </div>
-      </div>
-      <div class="form__flex-wrap">
-        <div class="form__row">
-          <h3>Lunes</h3>
-          <div class="input__group">
-            <label for="sell_2">AM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_2" placeholder="..." />
-          </div>
-          <div class="input__group">
-            <label for="sell_3">PM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_3" placeholder="..." />
-          </div>
-        </div>
-
-        <div class="form__row">
-          <h3>Martes</h3>
-          <div class="input__group">
-            <label for="sell_4">AM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_4" placeholder="..." />
-          </div>
-          <div class="input__group">
-            <label for="sell_5">PM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_5" placeholder="..." />
-          </div>
-        </div>
-
-        <div class="form__row">
-          <h3>Miércoles</h3>
-          <div class="input__group">
-            <label for="sell_6">AM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_6" placeholder="..." />
-          </div>
-          <div class="input__group">
-            <label for="sell_7">PM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_7" placeholder="..." />
-          </div>
-        </div>
-
-        <div class="form__row">
-          <h3>Jueves</h3>
-          <div class="input__group">
-            <label for="sell_8">AM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_8" placeholder="..." />
-          </div>
-          <div class="input__group">
-            <label for="sell_9">PM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_9" placeholder="..." />
-          </div>
-        </div>
-
-        <div class="form__row">
-          <h3>Viernes</h3>
-          <div class="input__group">
-            <label for="sell_10">AM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_10" placeholder="..." />
-          </div>
-          <div class="input__group">
-            <label for="sell_11">PM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_11" placeholder="..." />
-          </div>
-        </div>
-
-        <div class="form__row">
-          <h3>Sábado</h3>
-          <div class="input__group">
-            <label for="sell_12">AM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_12" placeholder="..." />
-          </div>
-          <div class="input__group">
-            <label for="sell_13">PM</label>
-            <input type="number" class="text-input" pattern="\d*" id="sell_13" placeholder="..." />
-          </div>
-        </div>
-      </div>
-
-      <button type="button" id="reset" class="button button--reset boton-alargado b-azul-hover" name="action">Resetear</button>
-    </form>
-  </div>
-
-  <!-- Tabla -->
-  <div class="table-wrapper" style="background-color: pink;">
-    <table id="turnipTable">
-      <thead>
-        <tr>
-          <th valign="bottom">Patrón</th>
-          <th colspan="2" valign="bottom">Probabilidad(%)</th>
-          <th colspan="2">
-            <div>Lunes</div>
-            <div>
-              <span>AM</span>
-              <span>PM</span>
-            </div>
-          </th>
-          <th colspan="2">
-            <div>Martes</div>
-            <div>
-              <span>AM</span>
-              <span>PM</span>
-            </div>
-          </th>
-          <th colspan="2">
-            <div>Miércoles</div>
-            <div>
-              <span>AM</span>
-              <span>PM</span>
-            </div>
-          </th>
-          <th colspan="2">
-            <div>Jueves</div>
-            <div>
-              <span>AM</span>
-              <span>PM</span>
-            </div>
-          </th>
-          <th colspan="2">
-            <div>Viernes</div>
-            <div>
-              <span>AM</span>
-              <span>PM</span>
-            </div>
-          </th>
-          <th colspan="2">
-            <div>Sábado</div>
-            <div>
-              <span>AM</span>
-              <span>PM</span>
-            </div>
-          </th>
-          <th valign="bottom">Mínimo garantizado</th>
-          <th valign="bottom">Máximo potencial</th>
-        </tr>
-      </thead>
-      <tbody id="output"></tbody>
-    </table>
-  </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh" crossorigin="anonymous"></script>
