--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -51,7 +51,7 @@
     <div class="grid-inicio grid-4">
       <img src="../../assets/images/regando-big.png">
       <button id="vecinos" routerLink="/catalogo-vecinos" class="bckg-img-boton"><h2>Vecinos</h2></button>
-      <button id="calendario" class="bckg-img-boton"><h2>Calendario</h2></button>
+      <button id="calendario" routerLink="/calendario" class="bckg-img-boton"><h2>Calendario</h2></button>
     </div>
   </div>
 
