Falta php para traer y guardar imagenes

--- a/project/myCrossing/src/app/perfil/perfil.component.html
+++ b/project/myCrossing/src/app/perfil/perfil.component.html
@@ -88,6 +88,8 @@
   </div>
 </div>
 <div class="wrapper-perfil shadow">
+  <h2>Mis album de fotos</h2>
+  <app-album></app-album>
   <h2>Mis vecinos</h2>
   <app-misvecinos></app-misvecinos>
 </div>
