--- a/project/myCrossing/src/app/navbar/navbar.component.html
+++ b/project/myCrossing/src/app/navbar/navbar.component.html
@@ -6,6 +6,7 @@
     <button class="button-nav" routerLink="/disenyos" routerLinkActive="activo">Diseños</button>
     <button class="button-nav" routerLink="/probador" routerLinkActive="activo">Probador</button>
     <button class="button-nav" id="irMercadoNabos" routerLink="/mercado-nabos" routerLinkActive="activo">Mercado Nabos</button>
+    <button class="button-nav" routerLink="/calendario" routerLinkActive="activo">Calendario</button>
   </div>
 
   <div class="boton-usuario">
