--- a/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
+++ b/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
@@ -10,6 +10,7 @@
             [view]="view"
             [(viewDate)]="viewDate"
             (viewDateChange)="closeOpenMonthViewDay()"
+            (click)="ngOnInit()"
           >
             <
           </div>
@@ -25,7 +26,7 @@
             [view]="view"
             [(viewDate)]="viewDate"
             (viewDateChange)="closeOpenMonthViewDay()"
-            (click)="getEvents()"
+            (click)="ngOnInit()"
           >
             >
           </div>
