--- a/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
+++ b/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
@@ -5,11 +5,10 @@
       <div class="col-md-4">
         <div class="btn-group">
           <div
-            class="boton-circular b-azul-hover"
+            class="b-small boton-circular b-azul-hover"
             mwlCalendarPreviousView
             [view]="view"
             [(viewDate)]="viewDate"
-            (viewDateChange)="closeOpenMonthViewDay()"
             (click)="ngOnInit()"
           >
             <
@@ -21,11 +20,10 @@
       </div>
       <div class="btn-group">
         <div
-            class="boton-circular b-azul-hover"
+            class="b-small boton-circular b-azul-hover"
             mwlCalendarNextView
             [view]="view"
             [(viewDate)]="viewDate"
-            (viewDateChange)="closeOpenMonthViewDay()"
             (click)="ngOnInit()"
           >
             >
@@ -36,16 +34,28 @@
       <mwl-calendar-month-view
         [viewDate]="viewDate"
         [events]="events"
-        [refresh]="refresh"
         [activeDayIsOpen]="activeDayIsOpen"
         [locale]="locale"
         [weekStartsOn]=1
-        (dayClicked)="dayClicked($event.day)"
         (eventClicked)="handleEvent('Clicked', $event.event)"
-        (click)="getEvents()"
-
       >
       </mwl-calendar-month-view>
+    </div>
+  </div>
+</div>
+
+<!-- Menu evento -->
+<div class="menu-evento" [hidden]="!infoEvento" (clickOutside)="this.infoEvento = false">
+  <h3>{{shownEvent.titulo}}</h3>
+  <div class="info-wrap" style="padding: 2%;">
+    <img src="{{shownEvent.icono}}"/>
+    <div class="flex-column-centered" style="width:70%">
+      <p>{{shownEvent.descripcion}}</p>
+      <div class="flex-between">
+        <ng-container *ngFor="let img of shownEvent.imagenes">
+          <img src="{{img}}" class="info-images"/>
+        </ng-container>
+      </div>
     </div>
   </div>
 </div>
