--- a/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
+++ b/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
@@ -1,4 +1,4 @@
-<div class="flex-column-centered padding-nav padding-footer background-img">
+<div class="flex-column-centered padding-nav padding-footer background-img" style='background-image:  url("../../assets/images/muelle-blur.png");height: unset;'>
   <h1>Calendario</h1>
   <div class="calendario-wrap">
     <div class="flex-centered">
