--- a/project/myCrossing/src/app/calc-nabos/calc-nabos.component.html
+++ b/project/myCrossing/src/app/calc-nabos/calc-nabos.component.html
@@ -184,7 +184,7 @@
   </div>
 
   <!-- Informacion -->
-  <div class="w100 background-img padding-nav-footer" style="padding: 3vw 0">
+  <div class="w100 background-img padding-nav-footer" style='background-image: url("../../assets/images/plaza-ayto-blur.jpg");padding: 3vw 0'>
     <div class="flex-between info-wrap">
       <!-- Información general -->
       <div class="flex-column-centered info-general">
