--- a/project/myCrossing/src/app/cal-eventos/cal-eventos.component.css
+++ b/project/myCrossing/src/app/cal-eventos/cal-eventos.component.css
@@ -12,8 +12,9 @@
 .calendario-wrap{
   width: 80%;
   border-radius: 50px;
-  background-color: green;
+  background-color: var(--verde);
   margin-top: 1.5vw;
+  box-shadow: 0px 0px 15px 4px rgb(23 23 23 / 55%);
 }
 
 .cal-open-day-events{
