--- a/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
+++ b/project/myCrossing/src/app/cal-eventos/cal-eventos.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-4">
         <div class="btn-group">
           <div
-            class="b-small boton-circular b-azul-hover"
+            class="b-small flex-centered boton-circular b-azul-hover"
             mwlCalendarPreviousView
             [view]="view"
             [(viewDate)]="viewDate"
@@ -20,7 +20,7 @@
       </div>
       <div class="btn-group">
         <div
-            class="b-small boton-circular b-azul-hover"
+            class=" flex-centered b-small boton-circular b-azul-hover"
             mwlCalendarNextView
             [view]="view"
             [(viewDate)]="viewDate"
