--- a/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
+++ b/project/myCrossing/src/app/cat-ropa/cat-ropa.component.html
@@ -1,5 +1,7 @@
+<div class="bg-scroll-1"></div>
+<div class="bg-scroll-2"></div>
 <!-- Filtros búsqueda -->
-<div class="content-wrapper-top" style="background-color: pink;">
+<div class="content-wrapper-top">
   <div style="margin-top: 4vw;">
     <h2>Catálogo de ropa</h2>
     <div class="flex-centered" style="padding-bottom: 1vw;">
