Nav, auth e inicio
-Del nav falta el dropdown

--- a/project/myCrossing/src/app/autenticacion/login/login.component.html
+++ b/project/myCrossing/src/app/autenticacion/login/login.component.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="iniciar">
-          <button class="boton-alargado b-azul-hover" type="submit">Iniciar sesion</button>
+          <button class="boton-alargado b-scale b-azul-hover" type="submit">Iniciar sesion</button>
         </div>
         <div class="flex-centered" style="width: 10%;margin:5% auto;justify-content: space-evenly;">
           <div class="botonmovil azul">
