--- a/project/myCrossing/src/app/autenticacion/registro/registro.component.html
+++ b/project/myCrossing/src/app/autenticacion/registro/registro.component.html
@@ -182,7 +182,7 @@
             </div>
           </div>
           <div class="registrar">
-            <button type="submit" class="boton-alargado b-azul" >Regístrate</button>
+            <button type="submit" class="boton-alargado b-azul b-azul-hover b-scale" >Regístrate</button>
           </div>
           <div class="aviso">{{aviso}}</div>
           <div class="flex-centered" style="width: 10%;margin:5% auto;justify-content: space-evenly;">
