--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -10,7 +10,7 @@
       </div>
       <div id="portada-item3">
         <ng-container *ngIf="!verification.logged">
-          <button routerLink="/registro">Empieza ya</button>
+          <button routerLink="/registro" class="b-scale">Empieza ya</button>
         </ng-container>
       </div>
       <br>
