--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -27,6 +27,25 @@ label{
   color: #2c271b;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  transition: 0.3s;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #69c0c0;
+  border-radius: 20px;
+  transition: 0.3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #3fa1a1;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
 .boton-circular{
   border-radius: 100%;
   width: 4vw;
@@ -82,6 +101,7 @@ label{
   border-radius: 50%;
   margin: 0 0.4vw;
   padding: 0.4vw;
+  transition: 0.3s;
 }
 
 .img-radio:hover{
@@ -100,6 +120,8 @@ label{
 .radio-hidden{
   position: absolute;
   opacity: 0;
+  bottom:0;
+  left:0;
 }
 
 .editar-blanco{
@@ -274,7 +296,7 @@ label{
   border-radius: 20px;
   border-style: none;
   padding: 0.5vw 1vw;
-  box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 20%);
+  box-shadow: inset 0 0 8px rgb(0 0 0 / 42%); /*0px 0px 10px 1px rgb(23 23 23 / 20%);*/
   width: 100%;
 }
 
@@ -299,4 +321,12 @@ label{
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #c9f3f3;
+}
+
+.b-scale{
+  transition: 0.3s;
+}
+
+.b-scale:hover{
+  transform: scale(1.1);
 }
