--- a/project/myCrossing/src/app/perfil/album/album.component.css
+++ b/project/myCrossing/src/app/perfil/album/album.component.css
@@ -48,3 +48,41 @@
     text-align: center;
     width: max-content;
 }
+.boton-circular{
+  width: 2.5vw;
+  height: 2.5vw;
+}
+.panel{
+    padding: 1%;
+    border-style: none;
+    border-radius: 2vw;
+    background-color: #F7F3E8;
+    box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+    z-index: 5;
+    width: fit-content;
+    width: 40vw;
+    font-size: 1.5vw;
+}
+.error{
+    margin-top: 1vw;
+    padding: 1vw;
+    background-color: rgb(248 155 155);
+    border-radius: 2vw;
+    border-style: solid;
+    width: fit-content;
+    border-color: #e76783;
+    margin-left: 12vw;
+}
+.container-panel{
+    top:25%;
+    position: fixed;
+    place-content: center;
+    width: 100%;
+}
+.fondo{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+}
