--- a/project/myCrossing/src/app/perfil/album/album.component.css
+++ b/project/myCrossing/src/app/perfil/album/album.component.css
@@ -41,12 +41,13 @@
     margin: 1vw;
     padding: 0.4vw;
     border-radius: 0.5vw;
-    max-width: 7vw;
-    height: 4.5vw;
+    width: 5.5vw;
+    max-height: 4.5vw;
 }
 .partial-image-container{
     text-align: center;
     width: max-content;
+    height: fit-content;
 }
 .boton-circular{
   width: 2.5vw;
@@ -58,7 +59,7 @@
     border-radius: 2vw;
     background-color: #F7F3E8;
     box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
-    z-index: 5;
+    z-index: 15;
     width: fit-content;
     width: 40vw;
     font-size: 1.5vw;
