--- a/project/myCrossing/src/app/perfil/album/album.component.html
+++ b/project/myCrossing/src/app/perfil/album/album.component.html
@@ -1,14 +1,24 @@
 <div class="container-album">
     <div class="container-main-photo">
-        <img src="{{mostrado}}" class="full-image">
+        <ng-container *ngIf="mostrado!=null">
+            <img src="{{mostrado}}" class="full-image">
+        </ng-container>
+        <ng-container *ngIf="mostrado==null">
+            <p>Guarda tus fotos para poder acceder a ellas en cualquier momento</p>
+        </ng-container>
     </div>
-    <div class="container-photos">
+    <div class="container-photos" [style.background-color]="borradoImagen?'#ffb68a':'#f7ffa5'">
         <ng-container *ngFor="let item of imagenes">
-            <div class="partial-image-container"><img src="{{item}}" (click)="muestra(item)" class="mini-full-image"></div>
+            <div class="partial-image-container"><img src="{{item}}" style="cursor: pointer;" (click)="muestra(item)" class="mini-full-image"></div>
         </ng-container>
         <div class="partial-image-container" style="padding-top: 2vw;">
             <button (click)="abreModalImagen()" class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
         </div>
+        <ng-container *ngIf="imagenes.length!=0">
+            <div class="partial-image-container" style="padding-top: 2vw;">
+                <button [style.background-color]="borradoImagen?'#ff6767':'#ffefc4'" (click)="activaBorradoImagen()" class="b-borrado-imagen b-bold boton-circular b-amarillo">{{borradoImagen?'Desactiva el borrado de imagenes':'Activa el borrado de imagenes'}}</button>
+            </div>
+        </ng-container>
     </div>
 </div>
 <div class="fondo" [style.display]="agregaImagen?'block':'none'" (click)="cierraModalImagen()"></div>
