--- a/project/myCrossing/src/app/navbar/navbar.component.html
+++ b/project/myCrossing/src/app/navbar/navbar.component.html
@@ -18,8 +18,8 @@
         <span style="font-size: 1.3vw;"><b>{{this.verification.nombre | capitalize}}</b></span>
         <img src="../../assets/images/imagen-perfil.png" (click)="toggleMenu()" class="b-scale" id="img-perfil" style="margin-left: 5%"/>
         <div class="dropdown-menu" [hidden]="!menu" >
-          <button class="button-menu" routerLink="/perfil" routerLinkActive="activo" (click)="menu = false">Perfil</button>
-          <button class="button-menu" (click)="logOut()">Cierra sesión</button>
+          <button class="button-menu" id="bm-1" routerLink="/perfil" routerLinkActive="activo" (click)="menu = false">Perfil</button>
+          <button class="button-menu" id="bm-2" (click)="logOut()">Cierra sesión</button>
         </div>
       </div>
     </ng-template>
