--- a/project/myCrossing/src/app/cat-peces/cat-peces.component.css
+++ b/project/myCrossing/src/app/cat-peces/cat-peces.component.css
@@ -61,6 +61,7 @@ span{
     margin: auto;
     background-color: #b5d6ff;
     border-radius: 50px;
+    box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
   }
 
   #filtro-sombra > button, #filtro-lugar > button, #filtro-usuario > button{
