--- a/project/myCrossing/src/app/cat-peces/cat-peces.component.css
+++ b/project/myCrossing/src/app/cat-peces/cat-peces.component.css
@@ -163,3 +163,10 @@ span{
   background-image: url("../../assets/images/pez-bg-1.png");
 }
 
+.no-result{
+  background-color: #b5d6ff;
+  border-radius: 50px;
+  position:relative;
+  margin: 3% 0;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+}
